<resources>
    <string name="app_name">Alivecor Assignment</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">User Profile</string>
    <string name="second_fragment_label">User Profile Details</string>
    <string name="show_user_profile_details">Show User Profile Details</string>
    <string name="go_to_user_profile">Go to User Profile</string>
    <string name="enter_your_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_date_of_birth">Enter your date of birth</string>
    <string name="first_name">First Name : </string>
    <string name="last_name">Last Name : </string>
    <string name="age">Age : </string>
</resources>