<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragments.UserDetailsFragment">

    <data>

        <variable
            name="userProfileViewModel"
            type="com.alivecor.assignment.viewmodels.UserProfileViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_top_sixteen"
            android:text="@string/first_name" />

        <TextView
            android:id="@+id/txt_user_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@id/txt_user_name"
            android:layout_margin="@dimen/margin_top_sixteen"
            android:text="@string/last_name" />

        <TextView
            android:id="@+id/txt_user_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_user_last_name"
            android:layout_margin="@dimen/margin_top_sixteen"
            android:text="@{userProfileViewModel.userAge}" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/go_to_user_profile" />

    </RelativeLayout>
</layout>