<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragments.UserProfileFragment">

    <data>

        <variable
            name="userProfileViewModel"
            type="com.alivecor.assignment.viewmodels.UserProfileViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_top_sixteen"
            android:layout_marginTop="@dimen/margin_top_sixteen"
            android:autofillHints="Your name"
            android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/enter_your_name"
            android:inputType="textCapWords|textPersonName"
            android:text="@={userProfileViewModel.userName}" />

        <EditText
            android:id="@+id/edt_user_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_user_name"
            android:layout_marginStart="@dimen/margin_top_sixteen"
            android:layout_marginEnd="@dimen/margin_top_sixteen"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/enter_your_last_name"
            android:inputType="textCapWords|textPersonName"
            android:text="@={userProfileViewModel.userLastName}"
            android:autofillHints="@string/enter_your_last_name" />

        <EditText
            android:id="@+id/edt_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_user_last_name"
            android:layout_margin="@dimen/margin_top_sixteen"
            android:cursorVisible="false"
            android:longClickable="false"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            style="?android:attr/textViewStyle"
            android:onClick="@{(v) -> userProfileViewModel.onClick(v)}"
            android:hint="@string/enter_your_date_of_birth"
            android:text="@={userProfileViewModel.userDob}"
            android:autofillHints="@string/enter_your_date_of_birth"
            android:inputType="none" />

        <Button
            android:id="@+id/btn_show_user_profile_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:onClick="@{(v) -> userProfileViewModel.onClick(v)}"
            android:text="@string/show_user_profile_details" />
    </RelativeLayout>
</layout>